--- a/task_responsive_web_design/practise grid - 3 (Britlex Language School)/styles.css
+++ b/task_responsive_web_design/practise grid - 3 (Britlex Language School)/styles.css
@@ -1038,11 +1038,13 @@ html {
 .skills {
   padding-top: 100px;
   padding-bottom: 80px;
+  margin: 0 -16px;
 }
 
 @media (max-width: 1280px) {
   .skills {
     padding-top: 72px;
+    margin: 0 -8px;
   }
 }
 
@@ -1056,6 +1058,7 @@ html {
   .skills {
     padding-top: 20px;
     padding-bottom: 40px;
+    margin: 0 -6px;
   }
 }
 
@@ -1063,6 +1066,7 @@ html {
   .skills {
     padding-top: 12px;
     padding-bottom: 32px;
+    margin: 0 -12px;
   }
 }
 
@@ -1480,9 +1484,64 @@ picture.fourth {
 
 /* about */
 .about {
-  display: none;
+  margin: 100px 0 80px;
+
+  display: grid;
+  grid-template: 24.5% 45.5% 30% / 16.3% 16.3% 16.3% 51.1%;
 }
 
+.about__title {
+  grid-column: 1 / 4;
+  grid-row: 1 / 2;
+
+  font-weight: 600;
+  font-size: 48px;
+
+  color: var(--primary-logo);
+}
+
+.about__text {
+  grid-column: 1 / 4;
+  grid-row: 2 / 3;
+
+  font-size: 20px;
+}
+
+.about__items {
+  grid-column: 1 / 4;
+  grid-row: 3 / 4;
+
+  display: grid;
+  grid-template: 1fr / repeat(3, 1fr);
+}
+
+.about__item {
+  display: grid;
+  grid-template: 1fr 1fr / 1fr;
+  justify-items: center;
+
+  font-size: 20px;
+  text-align: center;
+}
+
+.about__item-numbers {
+  font-weight: 600;
+  font-size: 48px;
+
+  color: var(--numbers);
+}
+
+.about__img {
+  grid-column: 4 / 5;
+  grid-row: 1 / 4;
+
+  margin-left: 20%;
+
+  width: 80%;
+  height: auto;
+}
+
+/* -------------------------------------------------------------- */
 /* pricing */
 .pricing {
   display: none;
