--- a/task_responsive_web_design/practise grid - 3 (Britlex Language School)/styles.css
+++ b/task_responsive_web_design/practise grid - 3 (Britlex Language School)/styles.css
@@ -1150,7 +1150,7 @@ html {
     border-radius: 5px;
 
     display: grid;
-    grid-template: auto 30px 1fr 50px / 1fr;
+    grid-template: auto auto 1fr 52px / 1fr;
   }
 }
 
@@ -1200,7 +1200,7 @@ html {
     grid-row: 2 / 3;
 
     display: grid;
-    grid-template: auto 30px 1fr 50px / 1fr;
+    grid-template: auto auto 1fr 52px / 1fr;
   }
 }
 
@@ -1236,6 +1236,8 @@ html {
 picture.all {
   grid-column: 1 / 2;
   grid-row: 1 / 2;
+
+  min-width: 300px;
 }
 
 .card__img.fourth {
@@ -1274,6 +1276,8 @@ picture.fourth {
   picture.fourth {
     grid-column: 1 / 2;
     grid-row: 1 / 2;
+
+    min-width: 300px;
   }
 }
 
@@ -1328,6 +1332,12 @@ picture.fourth {
   .card__title.fourth {
     grid-column: 1 / 2;
     grid-row: 2 / 3;
+  }
+}
+
+@media (max-width: 350px) {
+  .card__title {
+    font-size: 20px;
   }
 }
 
@@ -1387,6 +1397,12 @@ picture.fourth {
   .card__text.fourth {
     grid-column: 1 / 2;
     grid-row: 3 / 4;
+  }
+}
+
+@media (max-width: 350px) {
+  .card__text {
+    font-size: 16px;
   }
 }
 
@@ -1487,6 +1503,16 @@ picture.fourth {
   }
 }
 
+@media (max-width: 350px) {
+  .card__btn {
+    width: 220px;
+    height: 52px;
+
+    grid-template: 52px / 1fr;
+    font-size: 18px;
+  }
+}
+
 /* -------------------------------------------------------------- */
 
 /* about */
@@ -1578,17 +1604,11 @@ picture.fourth {
   }
 }
 
-/* @media (max-width: 450px) {
-  .about__title {
-    font-size: 20px;
-  }
-}
-
 @media (max-width: 350px) {
   .about__title {
-    font-size: 22px;
+    font-size: 38px;
   }
-} */
+}
 
 .about__text {
   grid-column: 1 / 2;
@@ -1814,6 +1834,16 @@ picture.fourth {
 
   .about__item.third {
     grid-column: 4 / 5;
+  }
+}
+
+@media (max-width: 350px) {
+  .about__item {
+    font-size: 16px;
+  }
+
+  .about__item-numbers {
+    font-size: 28px;
   }
 }
 
