--- a/task_responsive_web_design/practise grid - 3 (Britlex Language School)/styles.css
+++ b/task_responsive_web_design/practise grid - 3 (Britlex Language School)/styles.css
@@ -1106,18 +1106,18 @@ html {
 
 .skills__cards {
   display: grid;
-  grid-template: 0.63fr 0.37fr/ 1fr 1fr 1fr;
+  grid-template: 0.63fr 0.37fr/ 0.33fr 0.33fr 0.33fr;
 }
 
 @media (max-width: 650px) {
   .skills__cards {
-    grid-template: auto auto / 1fr 1fr;
+    grid-template: auto auto / 0.5fr 0.5fr;
   }
 }
 
-@media (max-width: 350px) {
+@media (max-width: 450px) {
   .skills__cards {
-    grid-template: 1fr 1fr 1fr 1fr / 1fr;
+    grid-template: 0.25fr 0.25fr 0.25fr 0.25fr / 1fr;
   }
 }
 
@@ -1204,7 +1204,7 @@ html {
   }
 }
 
-@media (max-width: 350px) {
+@media (max-width: 450px) {
   .skills__card.first {
     grid-column: 1 / 2;
     grid-row: 1 / 2;
@@ -1236,8 +1236,6 @@ html {
 picture.all {
   grid-column: 1 / 2;
   grid-row: 1 / 2;
-
-  min-width: 300px;
 }
 
 .card__img.fourth {
@@ -1261,12 +1259,6 @@ picture.all {
   }
 }
 
-@media (max-width: 350px) {
-  picture {
-    margin: 0 auto;
-  }
-}
-
 picture.fourth {
   grid-column: 2 / 3;
   grid-row: 1 / 4;
@@ -1276,8 +1268,16 @@ picture.fourth {
   picture.fourth {
     grid-column: 1 / 2;
     grid-row: 1 / 2;
+  }
+}
 
-    min-width: 300px;
+@media (max-width: 450px) {
+
+  picture.all,
+  picture.fourth {
+    margin: 0 auto;
+    max-width: 320px;
+    min-width: 220px;
   }
 }
 
@@ -1341,7 +1341,7 @@ picture.fourth {
   }
 }
 
-@media (max-width: 350px) {
+@media (max-width: 450px) {
   .card__title {
     font-size: 20px;
   }
@@ -1406,7 +1406,7 @@ picture.fourth {
   }
 }
 
-@media (max-width: 350px) {
+@media (max-width: 450px) {
   .card__text {
     font-size: 16px;
   }
@@ -1509,9 +1509,21 @@ picture.fourth {
   }
 }
 
-@media (max-width: 350px) {
+@media (max-width: 550px) {
   .card__btn {
-    width: 220px;
+    width: 100%;
+    font-size: 13px;
+  }
+}
+
+@media (max-width: 450px) {
+  .card__btn {
+    font-size: 12px;
+  }
+}
+
+@media (max-width: 450px) {
+  .card__btn {
     height: 52px;
 
     grid-template: 52px / 1fr;
@@ -1547,7 +1559,9 @@ picture.fourth {
 
 @media (max-width: 600px) {
   .about {
-    grid-template: 11.5% 58% 18.5% 12% / 1fr;
+    grid-template: 0.15fr 0.5fr 0.2fr auto 0.1fr / 1fr;
+
+    min-height: 600px;
   }
 }
 
@@ -1607,12 +1621,6 @@ picture.fourth {
   .about__title {
     font-size: 30px;
     text-align: center;
-  }
-}
-
-@media (max-width: 350px) {
-  .about__title {
-    font-size: 38px;
   }
 }
 
@@ -1687,6 +1695,12 @@ picture.fourth {
   }
 }
 
+@media (max-width: 400px) {
+  .about__text {
+    font-size: 16px;
+  }
+}
+
 .about__items {
   grid-column: 1 / 2;
   grid-row: 3 / 4;
@@ -1722,9 +1736,18 @@ picture.fourth {
 @media (max-width: 600px) {
   .about__items {
     grid-column: 1 / 2;
-    grid-row: 4 / 5;
+    grid-row: 5 / 6;
 
-    grid-template: 1fr / 1fr repeat(3, 20%) 1fr;
+    grid-template: 1fr / 0.17fr repeat(3, 0.22fr) 0.16fr;
+  }
+}
+
+@media (max-width: 400px) {
+  .about__items {
+    grid-column: 1 / 2;
+    grid-row: 5 / 6;
+
+    grid-template: 1fr / 0.11fr repeat(3, 0.26fr) 0.1fr;
   }
 }
 
@@ -1824,6 +1847,7 @@ picture.fourth {
 @media (max-width: 600px) {
   .about__item {
     font-size: 14px;
+    margin: 0 auto;
   }
 
   .about__item-numbers {
@@ -1840,16 +1864,6 @@ picture.fourth {
 
   .about__item.third {
     grid-column: 4 / 5;
-  }
-}
-
-@media (max-width: 350px) {
-  .about__item {
-    font-size: 16px;
-  }
-
-  .about__item-numbers {
-    font-size: 28px;
   }
 }
 
@@ -1877,8 +1891,8 @@ picture.fourth {
     grid-row: 2 / 3;
 
     margin: 0 auto;
-    height: 94%;
-    width: auto;
+    width: 100%;
+    height: auto;
   }
 }
 
@@ -1890,7 +1904,7 @@ picture.fourth {
 
 @media (max-width: 992px) {
   .pricing {
-    margin-bottom: 80px;
+    margin-bottom: 40px;
   }
 }
 
@@ -2055,6 +2069,18 @@ picture.fourth {
   .pricing__item-img.second {
     width: 70%;
     height: auto;
+  }
+}
+
+@media (max-width: 500px) {
+  .pricing__item-img {
+    margin-bottom: 0;
+    height: 80%;
+  }
+
+  .pricing__item-img.second {
+    margin-bottom: 32px;
+    width: 80%;
   }
 }
 
@@ -2245,6 +2271,52 @@ picture.fourth {
   grid-template: 30% 30% 40% / 42% 58%;
 }
 
+@media (max-width: 1480px) {
+  .contact {
+    display: grid;
+    grid-template: 30% 35% 35% / 42% 58%;
+  }
+}
+
+@media (max-width: 700px) {
+  .contact {
+    display: grid;
+    grid-template: 11% 8% auto 16% 11% / 1fr;
+
+    align-items: center;
+    justify-items: center;
+
+    margin-bottom: 120px;
+
+    min-height: 712px;
+  }
+}
+
+@media (max-width: 700px) {
+  .contact {
+    display: grid;
+    grid-template: 11% 8% auto 16% 11% / 1fr;
+
+    min-height: 700px;
+  }
+}
+
+@media (max-width: 500px) {
+  .contact {
+    grid-template: 11% 2% auto 16% 11% / 1fr;
+
+    min-height: 650px;
+  }
+}
+
+@media (max-width: 400px) {
+  .contact {
+    grid-template: 11% 4% auto 22% 18% / 1fr;
+
+    min-height: 600px;
+  }
+}
+
 .contact__title {
   grid-column: 2 / 3;
   grid-row: 1 / 2;
@@ -2261,6 +2333,31 @@ picture.fourth {
   }
 }
 
+@media (max-width: 1250px) {
+  .contact__title {
+    font-size: 40px;
+  }
+}
+
+@media (max-width: 992px) {
+  .contact__title {
+    font-size: 36px;
+  }
+}
+
+@media (max-width: 850px) {
+  .contact__title {
+    font-size: 32px;
+  }
+}
+
+@media (max-width: 700px) {
+  .contact__title {
+    grid-column: 1 / 2;
+    grid-row: 1 / 2;
+  }
+}
+
 .contact__img {
   grid-column: 1 / 2;
   grid-row: 1 / 4;
@@ -2270,6 +2367,36 @@ picture.fourth {
   width: 100%;
   height: auto;
 }
+
+@media (max-width: 992px) {
+  .contact__img {
+    padding-right: 10%;
+  }
+}
+
+@media (max-width: 700px) {
+  .contact__img {
+    grid-column: 1 / 2;
+    grid-row: 3 / 4;
+
+    padding-right: 0;
+
+    width: 75%;
+  }
+}
+
+@media (max-width: 600px) {
+  .contact__img {
+    width: 82%;
+  }
+}
+
+@media (max-width: 600px) {
+  .contact__img {
+    width: 90%;
+  }
+}
+
 
 .contact__text {
   grid-column: 2 / 3;
@@ -2284,6 +2411,34 @@ picture.fourth {
   }
 }
 
+@media (max-width: 1250px) {
+  .contact__text {
+    font-size: 16px;
+  }
+}
+
+@media (max-width: 992px) {
+  .contact__text {
+    font-size: 15px;
+  }
+}
+
+@media (max-width: 850px) {
+  .contact__text {
+    font-size: 14px;
+  }
+}
+
+@media (max-width: 700px) {
+  .contact__text {
+    grid-column: 1 / 2;
+    grid-row: 4 / 5;
+
+    font-size: 16px;
+    text-align: center;
+  }
+}
+
 .contact__form {
   grid-column: 2 / 3;
   grid-row: 3 / 4;
@@ -2295,6 +2450,47 @@ picture.fourth {
 @media (min-width: 1650px) {
   .contact__form {
     grid-template: 72px 1fr / 50% 15% 35%;
+  }
+}
+
+@media (max-width: 1250px) {
+  .contact__form {
+    grid-template: 60px 1fr / 55% 5% 40%;
+  }
+}
+
+@media (max-width: 992px) {
+  .contact__form {
+    grid-template: 60px / 55% 5% 40%;
+  }
+}
+
+@media (max-width: 850px) {
+  .contact__form {
+    grid-template: 52px / 55% 5% 40%;
+  }
+}
+
+@media (max-width: 700px) {
+  .contact__form {
+    grid-column: 1 / 2;
+    grid-row: 5 / 6;
+
+    grid-template: 48px / 100%;
+
+    justify-items: end;
+
+    width: 100%;
+  }
+}
+
+@media (max-width: 400px) {
+  .contact__form {
+    grid-template: 0.5fr 0.5fr / 1fr;
+
+    justify-items: center;
+
+    width: 100%;
   }
 }
 
@@ -2320,6 +2516,51 @@ picture.fourth {
   }
 }
 
+@media (max-width: 1250px) {
+  .contact__form-text {
+    font-size: 14px;
+  }
+}
+
+@media (max-width: 992px) {
+  .contact__form-text {
+    height: 60px;
+  }
+}
+
+@media (max-width: 850px) {
+  .contact__form-text {
+    height: 52px;
+  }
+}
+
+@media (max-width: 700px) {
+  .contact__form-text {
+    position: relative;
+
+    padding-left: 24px;
+
+    width: 100%;
+  }
+}
+
+@media (max-width: 400px) {
+  .contact__form-text {
+    margin-top: 20px;
+  }
+}
+
+.contact__form-text:hover {
+  box-shadow: 2px 2px 2px var(--primary-logo);
+}
+
+.contact__form-text:active,
+.contact__form-text:focus {
+  color: var(--primary-logo);
+  border-color: var(--primary-logo);
+  box-shadow: 2px 2px 2px var(--primary-logo);
+}
+
 .contact__form-btn {
   grid-column: 3 / 4;
   grid-row: 1 / 2;
@@ -2329,7 +2570,7 @@ picture.fourth {
   align-items: center;
 
   font-weight: 500;
-  font-size: 20px;
+  font-size: 24px;
   color: var(--bottoms-text);
 
   background-color: var(--bottoms-bg);
@@ -2341,7 +2582,45 @@ picture.fourth {
 
 @media (min-width: 1650px) {
   .contact__form-btn {
-    font-size: 23px;
+    font-size: 28px;
+  }
+}
+
+@media (max-width: 1250px) {
+  .contact__form-btn {
+    font-size: 20px;
+
+    height: 60px;
+  }
+}
+
+@media (max-width: 850px) {
+  .contact__form-btn {
+    font-size: 18px;
+
+    height: 52px;
+  }
+}
+
+@media (max-width: 700px) {
+  .contact__form-btn {
+    position: absolute;
+
+    width: 192px;
+
+    font-size: 16px;
+  }
+}
+
+@media (max-width: 400px) {
+  .contact__form-btn {
+    position: static;
+    margin-top: 20px;
+
+    grid-column: 1 / 2;
+    grid-row: 2 / 3;
+
+    width: 100%;
   }
 }
 
@@ -2385,7 +2664,8 @@ picture.fourth {
 
 @media (max-width: 520px) {
   .footer {
-    grid-template: 52px 20px / 1fr;
+
+    grid-template: 52px 52px / 1fr;
     justify-items: center;
     align-items: center;
   }
@@ -2404,6 +2684,8 @@ picture.fourth {
   .footer .nav {
     grid-column: 1 / 2;
     grid-row: 2 / 3;
+
+    align-items: flex-start;
   }
 }
 
