--- a/task_responsive_web_design/practise grid - 3 (Britlex Language School)/styles.css
+++ b/task_responsive_web_design/practise grid - 3 (Britlex Language School)/styles.css
@@ -604,7 +604,7 @@ html {
     grid-template: 1fr 1fr 1fr 76px / 1fr;
     justify-items: center;
 
-    max-height: auto;
+    height: auto;
   }
 }
 
